<resources>
    <string name="app_name">TikTok</string>
    <string name="btn_save">Lưu</string>

    <!--    Trang Sign In  -->
    <string name="signin_title">Đăng nhập TikTok</string>
    <string name="signin_with_username">Sử dụng tên người dùng</string>
    <string name="continue_with_email">Tiếp tục với Email</string>
    <string name="continue_with_facebook">Tiếp tục với Facebook</string>
    <string name="continue_with_google">Tiếp tục với Google</string>
    <string name="continue_with_apple">Tiếp tục với Apple</string>
    <string name="continue_with_instagram">Tiếp tục với Instagram</string>
    <string name="no_account">Bạn không có tài khoản? </string>
    <string name="sign_up">Đăng ký</string>

    <!--    Trang Sign Up  -->
    <string name="signup_title">Đăng ký TikTok</string>
    <string name="or">Hoặc</string>
    <string name="account_hint">Nhập tài khoản</string>
    <string name="password_hint">Nhập mật khẩu</string>
    <string name="btn_continue">Tiếp tục</string>
    <string name="have_account">Bạn đã có tài khoản? </string>
    <string name="sign_in">Đăng nhập</string>

    <!--    Trang Log In  -->
    <string name="username_hint">Nhập tên đăng nhập</string>
    <string name="confirm">Xác nhận</string>

    <!--    Trang Search -->
    <string name="viewed">Vừa xem</string>
    <string name="search_hint">Tìm kiếm</string>
    <string name="you_like">Bạn có thể thích</string>
    <string name="refresh">Làm mới</string>

    <!--    Trang Profile -->
    <string name="following_text">Đã follow</string>
    <string name="like">Thích</string>
    <string name="edit_profile">Chỉnh sửa hồ sơ</string>
    <string name="share_profile">Chia sẻ hồ sơ</string>
    <string name="add_bio">+  Thêm tiểu sử</string>
    <string name="your_bill">Đơn hàng của bạn</string>
    <string name="homescreen_icon">Trang chủ</string>
    <string name="search_icon">Tìm kiếm</string>
    <string name="noti_icon">Hộp thư</string>
    <string name="profile_icon">Hồ sơ</string>
    <string name="title_no_video">Không có video nào</string>
    <string name="your_video">Các video bạn đăng sẽ xuất hiện ở đây</string>

    <!-- Trang Edit Profile -->
    <string name="your_introduction">Giới thiệu về bạn</string>
    <string name="edit_profile_">Sửa hồ sơ</string>
    <string name="change_avt">Thay đổi ảnh</string>
    <string name="add_name">Thêm tên</string>
    <string name="add_ID">Thêm ID</string>
    <string name="bio">Tiểu sử</string>
    <string name="add_bio_">Thêm tiểu sử</string>
    <string name="add">Thêm</string>
    <string name="link">Liên kết</string>
    <string name="change_display_order">Thay đổi thứ tự hiển thị</string>

    <!-- Trang Edit Bio -->
    <string name="cancel">Hủy</string>
    <string name="bio_hint">Thêm tiểu sử</string>
    <string name="bio_title">Tiểu sử</string>
    <string name="constrant_bio">Tiểu sử không được quá 80 kí tự.</string>

    <!-- Trang Edit TikTok ID -->
    <string name="tiktok_id_hint">Thêm TikTok ID</string>
    <string name="constrant_tiktok_id_1">TikTok ID chỉ có thể bao gồm chữ cái, chữ số, dấu gạch dưới và dấu chấm. Khi thay đổi TikTok ID, liên kết hồ sơ của bạn cũng sẽ thay đổi.</string>
    <string name="constrant_tiktok_id_2">Bạn có thể thay đổi TikTok ID của mình một lần trong mỗi 30 ngày.</string>

    <!-- Trang Edit Username -->
    <string name="name">Tên</string>
    <string name="enter_username">Nhập username</string>
    <string name="constrant_name">Biệt danh không được quá 30 kí tự. Bạn chỉ có thể thay đổi biệt danh 7 ngày một lần.</string>

    <!-- Trang Notification  -->
    <string name="new_follower">Những Follower mới</string>
    <string name="activity">Hoạt động</string>
    <string name="refollow">Follow lại</string>
    <string name="you_know">Những người bạn có thể biết</string>
    <string name="time_follow">đã bắt đầu follow bạn. 3/17</string>
    <string name="time_ago">1 giờ</string>
    <string name="last_message">Tin nhắn cuối cùng</string>
    <string name="your_think">Bạn có suy nghĩ?</string>
    <string name="a_follower">Long Dương đã bắt đầu follow bạn.</string>
    <string name="a_comment">Binhtinhluilai đã bình luận: Anh gì ơi</string>
    <string name="a_noti_shop">7 tin cập nhật của cửa hàng và... • 1 ngày</string>
    <string name="noti_system">Thông báo hệ thống</string>
    <string name="a_noti_system">LIVE: LIVE Studio hiện đã khả d... • 1 ngày</string>
    <string name="message">Tin nhắn</string>

    <!-- Trang Share -->
    <string name="share">Chia sẻ tới</string>
    <string name="report">Báo cáo</string>

    <!-- Trang Comment  -->
    <string name="comments">54 Bình luận</string>
    <string name="comment_hint">Nhập bình luận...</string>
    <string name="reply">Trả lời</string>

    <!-- Trang Post Video -->
    <string name="add_description">Thêm mô tả...</string>
    <string name="preview">Xem trước</string>
    <string name="edit_cover">Sửa ảnh bìa</string>
    <string name="tag">\@ Nhắc đến</string>
    <string name="location">Vị trí</string>
    <string name="add_link">Thêm liên kết</string>
    <string name="who_seen">Ai cũng có thể xem bài đăng này</string>
    <string name="other_option">Tùy chọn khác</string>
    <string name="quality_management">Quyền riêng tư và nhiều mục cài đặt khác đã được chuyển đến đây</string>
    <string name="share_with">Chia sẻ với</string>
    <string name="draft">Nháp</string>
    <string name="post">Đăng</string>
    <string name="Jack_kitchen">Bếp nhà Jack</string>
    <string name="chill_area">Góc Chill</string>
    <string name="braided_floor">Lầu bếp bõ</string>
    <string name="china_circus">Rạp xiếc Trung Quốc</string>

    <!-- Others -->
    <string name="add_song">Thêm âm thanh</string>
    <string name="ten_minutes">10 phút</string>
    <string name="image">Ảnh</string>
    <string name="text">VĂN BẢN</string>
    <string name="poster">BÀI ĐĂNG</string>
    <string name="example">MẪU</string>
    <string name="choose">CHỌN</string>

    <string-array name="languages">
        <item>Tiếng Việt</item>
        <item>Tiếng Anh</item>
    </string-array>
</resources>
